# info2602_Project

info2602Project/: main.py
info2602_Project/public/: AddNew.html  HomePage.html  HomePage.js  RemoveRec.html  homepage.css  index.css  index.html  myRecipes.json  signin.js
project update 1/: main.py  myRecipes.json  pyproject.toml  recipes.json
project update 1/static/: app.html
project update 1/templates/: index.html
