[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["TheGoldDJ1 <damian.jawahir@gmail.com>"]
description = ""
name = "info2602project-1"
version = "0.1.0"
[tool.poetry.dependencies]
flask-sqlalchemy = "^2.4"
python = "^3.7"
sqlalchemy = "^1.3"
flask = "^1.1"
flask-jwt = "^0.3.2"
[tool.poetry.dev-dependencies]
